Fixed overflow issue regarding the windows

--- a/apps/desktop/styles/WindowContainer.module.css
+++ b/apps/desktop/styles/WindowContainer.module.css
@@ -68,7 +68,8 @@
 }
 
 .content {
-  box-sizing: content-box;
+  display: block;
+  overflow: hidden;
   flex: 1 1 auto;
   margin: 3px;
 }
